--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,11 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize"/>
 
+        <activity
+            android:name=".ui.goals.GoalCalculatorActivity"
+            android:exported="false"
+            android:theme="@style/Theme.HappyKidneys" />
+
         <!-- WorkManager Configuration -->
         <provider
             android:name="androidx.startup.InitializationProvider"
