--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,15 @@
                 android:value="androidx.startup" />
         </provider>
 
+        <service
+            android:name=".services.DataLayerListenerService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
+                <data android:scheme="wear" android:host="*" android:pathPrefix="/add_water_from_watch" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
